samples/_failures_safe/1761360996_f9ab67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41502c0d.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
